# sqlalchemy_dremio

./: .gitignore  pyproject.toml  setup.py
sqlalchemy_dremio/: __init__.py  flight.py
